# CFWServer

./: CMakeLists.txt  README.md  config.cfg
cgi-bin/: get_time.cgi
core/: config.c  config.h  main.c  server.c  server.h
static/: 404page.html  index.html
utils/: utils.c  utils.h
